[gd_scene load_steps=4 format=3 uid="uid://dpa220612g0bb"]

[ext_resource type="Script" path="res://testing.gd" id="1_0gmyl"]
[ext_resource type="Texture2D" uid="uid://dbj88wqbgoq6p" path="res://icon.svg" id="2_flw85"]

[sub_resource type="CircleShape2D" id="CircleShape2D_g6bld"]
radius = 270.668

[node name="Node2D" type="Node2D" node_paths=PackedStringArray("timer")]
script = ExtResource("1_0gmyl")
timer = NodePath("Timer")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_g6bld")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_flw85")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
